Fix: Spacing between forms.

--- a/SurveyForm/SurveyForm.css
+++ b/SurveyForm/SurveyForm.css
@@ -51,13 +51,14 @@ textarea {
 }
 
 .form-group {
-    margin: 0 auto 0 auto;
+    margin: 0 auto 1.25rem auto;
     padding: 0.25rem;
   }
 
 .form-control {
     display: block;
     width: 100%;
+    margin: .25rem auto 0 auto;
 }
 
 .input-checkbox .input-radio {
